# Cargo.toml
[package]
name = "kopernikus-code-challenge"
version = "0.1.0"
edition = "2021"
publish = false
[dependencies]
libloading = "0.6"
#my_shared_library = "0.1"

[[bin]]  # This section defines a binary target.
name = "kopernikus-challenge"
path = "main.rs"

[build-dependencies]
cc = "1.0"
